# VAD-Model-from-Scratch

./: .gitignore  Cw1_w1987535_HasithVikasithaDharmarathna.ipynb  README.md  pyproject.toml  test1.ipynb
